--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,24 @@ STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key_here
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
 
 # Google OAuth 2.0
-# Get your client ID from: https://console.cloud.google.com/apis/credentials
+# Get from: https://console.cloud.google.com/apis/credentials
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+
+# Google Wallet API
+# Get from: https://console.cloud.google.com/iam-admin/serviceaccounts
+# Download service account JSON and save to project folder
+# Then set path here
+GOOGLE_APPLICATION_CREDENTIALS=path/to/service-account-key.json
+WALLET_ISSUER_ID=your-issuer-id
+
 
 # Admin Emails (comma-separated)
 # Users with these emails will have super admin access
 ADMIN_EMAILS=admin@gym.com,youremail@example.com
+
+# Email Configuration (Optional - for password reset emails)
+# Use Gmail SMTP or any other SMTP server
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+SMTP_EMAIL=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
