Fix: Add missing Flask-Compress dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Minimal dependencies for cloud deployment
 Flask==3.0.0
+Flask-Compress==1.14
 gunicorn==21.2.0
 Werkzeug==3.0.1
 python-dotenv==1.0.0
