--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,6 @@ google-auth==2.26.2
 google-auth-oauthlib==1.2.0
 google-api-python-client==2.114.0
 
-# Only if bulk import needed (optional - comment out for faster deploy)
-# pandas>=2.2.0
-# openpyxl==3.1.2
+# Bulk import dependencies
+pandas>=2.2.0
+openpyxl==3.1.2
