Add PostgreSQL support with migration scripts

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,6 @@ SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 SMTP_EMAIL=your-email@gmail.com
 SMTP_PASSWORD=your-app-password
+
+# Database (PostgreSQL) - for Railway/Render deployment
+DATABASE_URL=postgresql://user:password@host:port/database
